[gd_scene load_steps=42 format=3 uid="uid://c3qw7n5hy8r2m"]

[ext_resource type="PackedScene" uid="uid://dxy4qr7bvn2yw" path="res://src/characters/scenes/Player.tscn" id="1_player"]
[ext_resource type="PackedScene" uid="uid://bsxw6h2nq3r8f" path="res://src/ui/GameHUD.tscn" id="2_hud"]
[ext_resource type="Script" uid="uid://b7w68m3pdjt6" path="res://src/systems/scripts/GameManager.gd" id="3_manager"]
[ext_resource type="Script" uid="uid://bmb7bpiw1h3c8" path="res://src/systems/scripts/CustomerSpawner.gd" id="4_spawner"]
[ext_resource type="PackedScene" uid="uid://bqx8fy3r2m4cn" path="res://src/characters/scenes/Customer.tscn" id="5_customer"]
[ext_resource type="PackedScene" uid="uid://dtb8wmx5f3r2h" path="res://src/environment/scenes/Table.tscn" id="6_table"]
[ext_resource type="PackedScene" uid="uid://crxn2p3hw6j4m" path="res://src/environment/scenes/Oven.tscn" id="7_oven"]
[ext_resource type="PackedScene" uid="uid://b3d7yqx5nwm8p" path="res://src/environment/scenes/Stove.tscn" id="8_stove"]
[ext_resource type="PackedScene" uid="uid://dmkq8hw3pr7yi" path="res://src/environment/scenes/PrepCounter.tscn" id="9_prep"]
[ext_resource type="PackedScene" uid="uid://cpadl046r15r8" path="res://src/ui/OrderBoard.tscn" id="13_orderboard"]
[ext_resource type="PackedScene" uid="uid://5wo00kdmfe6j" path="res://src/environment/scenes/Door.tscn" id="14_door"]
[ext_resource type="Script" uid="uid://326w0tx0pu00" path="res://src/environment/scripts/ServingCounter.gd" id="15_serving_counter"]
[ext_resource type="PackedScene" uid="uid://ca8k3vb2qwc7h" path="res://src/ui/ShopUI.tscn" id="16_shop_ui"]
[ext_resource type="PackedScene" uid="uid://dpw8x3kv2n5m4" path="res://src/ui/PauseMenu.tscn" id="16_pause_menu"]
[ext_resource type="PackedScene" uid="uid://b5mn8qr3xw4k7" path="res://src/ui/SettingsMenu.tscn" id="16_settings_menu"]
[ext_resource type="PackedScene" uid="uid://c4xp9m7n2q8k5" path="res://src/ui/MainMenu.tscn" id="16_main_menu"]
[ext_resource type="PackedScene" uid="uid://b2qx8kw5fn3m9" path="res://src/ui/FPSDisplay.tscn" id="16_fps_display"]
[ext_resource type="Script" uid="uid://ce5yut81yf4" path="res://src/systems/scripts/WaiterSpawner.gd" id="17_waiter_spawner"]
[ext_resource type="Script" uid="uid://7pg8hw4c7ox4" path="res://src/systems/scripts/ChefSpawner.gd" id="18_chef_spawner"]
[ext_resource type="PackedScene" uid="uid://c5k7j8nan6p2q" path="res://src/characters/scenes/Chef.tscn" id="19_chef"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sky"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_env"]
sky_material = SubResource("ProceduralSkyMaterial_sky")

[sub_resource type="Environment" id="Environment_world"]
background_mode = 2
sky = SubResource("Sky_env")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.5
tonemap_mode = 2
glow_enabled = true

[sub_resource type="NavigationMesh" id="NavigationMesh_nav"]
vertices = PackedVector3Array(-9.208666, 0.3, -9, -9.208666, 0.3, 9.25, 9.041334, 0.3, 9.25, 9.041334, 0.3, -9)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.8, 0.75, 0.7, 1)
roughness = 0.8

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
material = SubResource("StandardMaterial3D_floor")
size = Vector3(20, 0.2, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(20, 0.2, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wall"]
albedo_color = Color(0.9, 0.9, 0.85, 1)
roughness = 0.9

[sub_resource type="BoxMesh" id="BoxMesh_wall"]
material = SubResource("StandardMaterial3D_wall")
size = Vector3(20, 4, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall"]
size = Vector3(20, 4, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_wall_section_door"]
material = SubResource("StandardMaterial3D_wall")
size = Vector3(8.82, 4, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall_section_door"]
size = Vector3(8.196598, 4, 0.3)

[sub_resource type="BoxMesh" id="BoxMesh_wall_section"]
material = SubResource("StandardMaterial3D_wall")
size = Vector3(8.1, 4, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall_section"]
size = Vector3(7.7436523, 4, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_glass"]
transparency = 1
albedo_color = Color(0.8, 0.9, 1, 0.3)
metallic = 0.1
roughness = 0.1

[sub_resource type="BoxMesh" id="BoxMesh_window_glass"]
material = SubResource("StandardMaterial3D_glass")
size = Vector3(3.55, 1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wood_counter"]
albedo_color = Color(0.4, 0.25, 0.15, 1)
roughness = 0.7

[sub_resource type="BoxMesh" id="BoxMesh_wood_counter"]
material = SubResource("StandardMaterial3D_wood_counter")
size = Vector3(3.55, 0.1, 0.6)

[sub_resource type="BoxShape3D" id="BoxShape3D_wood_counter"]
size = Vector3(3.43573, 0.1, 0.6)

[sub_resource type="BoxMesh" id="BoxMesh_wall_filler_top"]
material = SubResource("StandardMaterial3D_wall")
size = Vector3(5.1, 1.5, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall_filler_top"]
size = Vector3(3.5580812, 1.5, 0.3)

[sub_resource type="BoxMesh" id="BoxMesh_wall_filler_bottom"]
material = SubResource("StandardMaterial3D_wall")
size = Vector3(3.55, 1, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall_filler_bottom"]
size = Vector3(3.4995117, 0.93359375, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall_gap_filler"]
size = Vector3(7.2439537, 4, 0.3)

[sub_resource type="BoxMesh" id="BoxMesh_wall_gap_filler"]
material = SubResource("StandardMaterial3D_wall")
size = Vector3(4.4, 4, 0.3)

[node name="Main3D" type="Node3D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_manager")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_world")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
light_energy = 1.5
shadow_enabled = true

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_nav")

[node name="Floor" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/Floor"]
mesh = SubResource("BoxMesh_floor")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="Walls" type="Node3D" parent="NavigationRegion3D"]

[node name="WallNorth" type="StaticBody3D" parent="NavigationRegion3D/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -10)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/Walls/WallNorth"]
mesh = SubResource("BoxMesh_wall")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Walls/WallNorth"]
shape = SubResource("BoxShape3D_wall")

[node name="WallSouth" type="StaticBody3D" parent="NavigationRegion3D/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 10)

[node name="WallSouthLeft" type="StaticBody3D" parent="NavigationRegion3D/Walls/WallSouth"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.5, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/Walls/WallSouth/WallSouthLeft"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.451334, -0.013344288, 0.0076704025)
mesh = SubResource("BoxMesh_wall_section_door")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Walls/WallSouth/WallSouthLeft"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.19869995, 0, 0)
shape = SubResource("BoxShape3D_wall_section_door")

[node name="WallSouthRight" type="StaticBody3D" parent="NavigationRegion3D/Walls/WallSouth"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.5, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/Walls/WallSouth/WallSouthRight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7683511, 0, 0)
mesh = SubResource("BoxMesh_wall_section_door")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Walls/WallSouth/WallSouthRight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.74749756, 0, 0)
shape = SubResource("BoxShape3D_wall_section_door")

[node name="EntranceDoorLeft" parent="NavigationRegion3D/Walls/WallSouth" instance=ExtResource("14_door")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.6578054, -0.75310636, -0.022693634)
door_color = Color(0.4, 0.25, 0.15, 1)

[node name="EntranceDoorRight" parent="NavigationRegion3D/Walls/WallSouth" instance=ExtResource("14_door")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15992808, -0.74722004, -0.024230957)
open_angle = -90.0
door_color = Color(0.4, 0.25, 0.15, 1)

[node name="WallEast" type="StaticBody3D" parent="NavigationRegion3D/Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10, 2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/Walls/WallEast"]
mesh = SubResource("BoxMesh_wall")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Walls/WallEast"]
shape = SubResource("BoxShape3D_wall")

[node name="WallWest" type="StaticBody3D" parent="NavigationRegion3D/Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -10, 2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/Walls/WallWest"]
mesh = SubResource("BoxMesh_wall")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Walls/WallWest"]
shape = SubResource("BoxShape3D_wall")

[node name="StaffArea" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="Oven" parent="StaffArea" groups=["cooking_station"] instance=ExtResource("7_oven")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2, 0, -5)

[node name="Stove" parent="StaffArea" groups=["cooking_station"] instance=ExtResource("8_stove")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)

[node name="PrepCounter" parent="StaffArea" groups=["cooking_station"] instance=ExtResource("9_prep")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2, 0, -3)

[node name="FoodStorage" type="Node3D" parent="StaffArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -5)

[node name="OrderBoard" parent="StaffArea" instance=ExtResource("13_orderboard")]
transform = Transform3D(-4.369442e-08, -0.027869299, 0.99961156, -1.2182061e-09, 0.99961156, 0.027869299, -1, 0, -4.37114e-08, -3.6842003, 2.542204, -0.0011649132)

[node name="DiningArea" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)

[node name="Table1" parent="DiningArea" instance=ExtResource("6_table")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="Table2" parent="DiningArea" instance=ExtResource("6_table")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.2535725, 0, 0)
table_number = 2

[node name="Table3" parent="DiningArea" instance=ExtResource("6_table")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
table_number = 3

[node name="KitchenDividingWall" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="WallNorthSection" type="StaticBody3D" parent="KitchenDividingWall"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 2, -7)

[node name="MeshInstance3D" type="MeshInstance3D" parent="KitchenDividingWall/WallNorthSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.71169424, 0, 0)
mesh = SubResource("BoxMesh_wall_section_door")

[node name="CollisionShape3D" type="CollisionShape3D" parent="KitchenDividingWall/WallNorthSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.49596977, 0, 0)
shape = SubResource("BoxShape3D_wall_section_door")

[node name="WallSouthSection" type="StaticBody3D" parent="KitchenDividingWall"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 2, 6)

[node name="MeshInstance3D" type="MeshInstance3D" parent="KitchenDividingWall/WallSouthSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.19596958, 0, 0)
mesh = SubResource("BoxMesh_wall_section")

[node name="CollisionShape3D" type="CollisionShape3D" parent="KitchenDividingWall/WallSouthSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.37182617, 0, 0)
shape = SubResource("BoxShape3D_wall_section")

[node name="WindowGlass" type="MeshInstance3D" parent="KitchenDividingWall"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.0421021, 1.9538703, -0.010570347)
mesh = SubResource("BoxMesh_window_glass")

[node name="WoodenCounter" type="StaticBody3D" parent="KitchenDividingWall" groups=["serving_counter"]]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, 0)
collision_layer = 16
script = ExtResource("15_serving_counter")

[node name="Visual" type="MeshInstance3D" parent="KitchenDividingWall/WoodenCounter"]
mesh = SubResource("BoxMesh_wood_counter")

[node name="CollisionShape3D" type="CollisionShape3D" parent="KitchenDividingWall/WoodenCounter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.03213501, 0, 0)
shape = SubResource("BoxShape3D_wood_counter")

[node name="FoodPosition" type="Marker3D" parent="KitchenDividingWall/WoodenCounter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CookingLight" type="OmniLight3D" parent="KitchenDividingWall/WoodenCounter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
visible = false
light_color = Color(1, 0.8, 0.4, 1)
light_energy = 0.5
omni_range = 2.0

[node name="WallFillerTop" type="StaticBody3D" parent="KitchenDividingWall"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 3.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="KitchenDividingWall/WallFillerTop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.77037466, -0.24812889, 0)
mesh = SubResource("BoxMesh_wall_filler_top")

[node name="CollisionShape3D" type="CollisionShape3D" parent="KitchenDividingWall/WallFillerTop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05332136, -0.25496674, 0)
shape = SubResource("BoxShape3D_wall_filler_top")

[node name="WallFillerBottom" type="StaticBody3D" parent="KitchenDividingWall"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.25, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="KitchenDividingWall/WallFillerBottom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.17373872, 0)
mesh = SubResource("BoxMesh_wall_filler_bottom")

[node name="CollisionShape3D" type="CollisionShape3D" parent="KitchenDividingWall/WallFillerBottom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.012939453, 0.21679688, 0)
shape = SubResource("BoxShape3D_wall_filler_bottom")

[node name="WallGapFillerNorth" type="StaticBody3D" parent="KitchenDividingWall"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 2, -5.625)

[node name="CollisionShape3D" type="CollisionShape3D" parent="KitchenDividingWall/WallGapFillerNorth"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3166637, 0, 2.3841858e-07)
shape = SubResource("BoxShape3D_wall_gap_filler")

[node name="WallGapFillerSouth" type="StaticBody3D" parent="KitchenDividingWall"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 2, 5.625)

[node name="MeshInstance3D" type="MeshInstance3D" parent="KitchenDividingWall/WallGapFillerSouth"]
mesh = SubResource("BoxMesh_wall_gap_filler")

[node name="CollisionShape3D" type="CollisionShape3D" parent="KitchenDividingWall/WallGapFillerSouth"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.17361069, 0, 0)
shape = SubResource("BoxShape3D_wall_gap_filler")

[node name="KitchenDoor" parent="KitchenDividingWall" instance=ExtResource("14_door")]
transform = Transform3D(0.007888787, 0, 0.9999689, 0, 1, 0, -0.9999689, 0, 0.007888787, 0.08662224, 1.2767344, -1.7732308)

[node name="CustomerSpawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9)
script = ExtResource("4_spawner")
customer_scene = ExtResource("5_customer")
spawn_interval_min = 15.0
spawn_interval_max = 30.0
max_customers = 3
order_board = NodePath("../StaffArea/OrderBoard")

[node name="SpawnPoint" type="Marker3D" parent="CustomerSpawner"]

[node name="EntranceMarker" type="Marker3D" parent="CustomerSpawner"]

[node name="ExitMarker" type="Marker3D" parent="CustomerSpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5)

[node name="WaiterSpawner" type="Node" parent="."]
script = ExtResource("17_waiter_spawner")
spawn_position = Vector3(2, 1, 8)

[node name="ChefSpawner" type="Node" parent="."]
script = ExtResource("18_chef_spawner")
chef_scene = ExtResource("19_chef")
spawn_position = Vector3(-5, 0, -2)
storage_position = Vector3(-7, 0, -2)
max_chefs = 2

[node name="Player" parent="." groups=["player"] instance=ExtResource("1_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 5)

[node name="GameHUD" parent="." instance=ExtResource("2_hud")]

[node name="ShopUI" parent="." instance=ExtResource("16_shop_ui")]

[node name="SettingsMenu" parent="." instance=ExtResource("16_settings_menu")]

[node name="PauseMenu" parent="." instance=ExtResource("16_pause_menu")]

[node name="MainMenu" parent="." instance=ExtResource("16_main_menu")]

[node name="FPSDisplay" parent="." instance=ExtResource("16_fps_display")]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05563897, 3.235274, 9.994219)
mesh = SubResource("BoxMesh_wall_filler_top")
